# paper-fetch-skill

./: .env.example  .gitignore  CHANGELOG.md  README.md  SCIENCE_PNAS_INTEGRATION_PLAN.md  extraction-rule-test-simplification-plan.md  extraction-rules-audit.md  install-codex.sh  install-formula-tools.sh  install-offline.ps1  install-offline.sh  install.sh  optimization-analysis.md  package-lock.json  package.json  paper-fetch-windows-cli-mcp-skill-install.md  performance_optimize.md  plan-extract-live-tooling.md  problems.md  pyproject.toml  redundancy-audit.md  redundancy_audit.md  refactor-audit.md  requirements.txt  rollout-2026-04-28T19-46-52-019dd3e9-df6e-7f91-9bb1-2d0093b7ba11.jsonl  todo.md
agents/: openai.yaml
docs/: README.md  deployment.md  extraction-rules.md  flaresolverr.md  providers.md
figures/: 10.1038_s41586-026-10265-5.fetch-envelope.json  10.1126_sciadv.adp3964.fetch-envelope.json  deforestation-induced-runoff-changes-dominated-by-forest-climate-feedbacks.md  towards-end-to-end-automation-of-ai-research.md
installer/: paper-fetch-skill.iss
references/: api_notes.md  elsevier_markdown_mapping.md  formula_backend_report.json  journal_lists.yaml  routing_rules.md
scripts/: __init__.py  article_markdown.py  article_model.py  benchmark_formula_converters.py  build-offline-package-windows.ps1  build-offline-package.sh  dev-bootstrap.sh  elsevier_xml_rules.py  export_geography_issue_artifacts.py  fetch_common.py  formula_conversion.py  fulltext_links.py  group_geography_issue_artifacts.py  install-claude-skill.sh  install-codex-skill.sh  paper_fetch.py  provider_clients.py  publisher_identity.py  render_skill_template.py  resolve_query.py  (+6 more)
tests/: test_mcp.py  (+17 more)
(+293 files in other folders)
