[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-fetch-skill"
version = "0.2.0"
description = "AI-friendly paper fetch tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.14,<5",
  "mcp>=1.27,<2",
  "trafilatura>=2.0,<3",
  "lxml>=6,<7",
  "PyMuPDF>=1.27,<2",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<1",
]

[project.scripts]
paper-fetch = "paper_fetch.cli:main"
paper-fetch-mcp = "paper_fetch.mcp.server:main"
paper-fetch-install-formula-tools = "paper_fetch.formula.install:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"paper_fetch.resources.formula" = ["*.json", "*.mjs"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
